src/objects/Siva_TestObject1__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>first_fullname__c</fullName>
        <externalId>true</externalId>
        <label>firstname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mandatory_number__c</fullName>
        <label>mandatory_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mandatory_text__c</fullName>
        <label>mandatory_text</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile_number__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <label>SivaTestObject1</label>
</CustomObject>